--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -206,6 +206,15 @@ h3 {
     overflow: hidden;
     border-bottom: 1px solid #d8bfd8;
 }
+.request-date {
+    margin: 5px 0 5px 5px;
+    padding: 2px 0;
+    display: block;
+    font-size: 12px;
+    float: left;
+    font-style: italic;
+    color: #9c9c9c;
+}
 
 .label {
     margin: 5px 5px 5px 0;
