--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -248,17 +248,31 @@ h3 {
 .pagination {
     list-style: none;
     overflow: hidden;
+    margin: 10px 0;
 }
 
-.pg-link a {
+.pagination li{
     display: block;
     float: left;
     margin: 10px 0;
-    padding: 5px 10px;
+    padding: 2px 8px;
     border: 1px solid #363851;
-    border-radius: 5px;
-    background: inherit;
-    color: inherit;
+}
+.pagination li:first-child {
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+.pagination li:last-child {
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.pagination li.active {
+    background: #363851 !important;
+}
+.pagination li.active a {
+    color: #fff;
 }
 
 .active {
