--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900|Ubuntu:400,700');
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One|Kaushan+Script|Permanent+Marker');
 
 * {
     padding: 0;
@@ -11,7 +12,7 @@ body, html {
     line-height: 1.4;
     background: #eeeeee;
     font-size: 14px;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 a {
@@ -19,10 +20,18 @@ a {
     color: #363851;
 }
 
+.bg {
+    background-image: url("../img/bg5.jpeg");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+
 .wrapper {
     width: 70%;
     margin: 0 auto;
-    min-height: 100%;
+    min-height: 100vh;
     position: relative;
 }
 
@@ -128,6 +137,11 @@ label {
 
 .btn-default {
     border: 1px solid #363851;
+}
+
+.btn-landing {
+    border: 1px solid #fff;
+    color: white;
 }
 
 .btn-approve {
@@ -323,31 +337,36 @@ footer p {
     font-size: 11px;
 }
 
-.features {
-    list-style: none;
+.landing {
     text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    letter-spacing: 3px;
-    text-transform: uppercase;
     padding-top: 150px;
 }
 
-.features li {
-    background: #6aa1c4;
-    border-bottom: 1px solid #d8bfd8;
-    margin: 15px 0;
-    padding: 5px;
+.landing h1 {
+    color: #fff;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-family: 'Fredoka One', cursive, sans-serif;
+    font-size: 3.25rem;
+    text-shadow: 3px 3px 1px #181818;
 }
 
-.features li a {
-    display: block;
-    color: #363851;
+.landing p {
+    color: #fff;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    text-shadow: 3px 3px 1px #181818;
 }
 
 /** Media queries **/
 @media only screen and (max-width: 900px) {
     .form-wrapper {
         width: 90%;
+    }
+
+    .landing h1 {
+        font-size: 2.85rem;
     }
 
     .wrapper {
